fixing the overflow property

--- a/app/assets/stylesheets/content/layout.scss
+++ b/app/assets/stylesheets/content/layout.scss
@@ -1,6 +1,6 @@
 .content-page__container {
   font-family: $heiti;
-  overflow: auto;
+  overflow: hidden;
   @include content-container;
 }
 
